6-2 and some fix

--- a/4-module/1-task/index.html
+++ b/4-module/1-task/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Занятие 4: Список друзей</title>
   </head>
 
@@ -20,35 +21,7 @@
           firstName: 'Christopher',
           lastName: 'Michael'
         }
-      ];
-
-      function makeFriendsList(friends) {
-
-      //создаю переменную под массив друзей
-      let friendsArr = [];
-
-      //добавляю друзей как элементы массива - строки
-      friends.map(function(friend) {
-        let friendOne = friend.firstName + ' ' + friend.lastName;
-        friendsArr.push(friendOne);
-      });
-
-
-      //создаю элемент <ul>
-      let ul = document.createElement('ul');
-      let ulInnerContent = '';
-
-      //создаю элементы <li> с содержимым из массива как строки
-      friendsArr.forEach(function(item, i, arr) {
-        let li = `<li>${item}</li>`;
-        ulInnerContent = ulInnerContent + li;
-      });
-
-      //добавляю в ul li
-      ul.innerHTML = ulInnerContent;
-
-      return ul;
-    }
+      ];    
 
       document.body.appendChild(makeFriendsList(friends));
     </script>
