--- a/6-module/2-task/index.html
+++ b/6-module/2-task/index.html
@@ -24,6 +24,9 @@
     });
 
     holder.append(card.elem);
+    document.body.addEventListener('product-add', (event) => {
+      console.log(event);
+    });
   </script>
 </body>
 
